# splav-encoder-read-cpp

./: CMakeLists.txt  CMakePresets.json  Channel5Data.h  HardwareManager.cpp  HardwareManager.h  MessagePackage.h  MessageSender.cpp  MessageSender.h  ModbusRegistersView.h  ModbusServer.cpp  ModbusServer.h  README.md  README.txt  main.cpp  network.txt  systemd.txt  update-and-build.sh
